init rtl editen

--- a/utilities-border.html
+++ b/utilities-border.html
@@ -23,7 +23,7 @@
 <body id="page-top">
 
   <!-- Page Wrapper -->
-  <div id="wrapper">
+  <div id="wrapper" class="rtl">
 
     <!-- Sidebar -->
     <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
@@ -156,7 +156,7 @@
           <!-- Topbar Search -->
           <form class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
             <div class="input-group">
-              <input type="text" class="form-control bg-light border-0 small" placeholder="Search for..." aria-label="Search" aria-describedby="basic-addon2">
+              <input type="text" class="form-control bg-light border-0 small h-a" placeholder="Search for..." aria-label="Search" aria-describedby="basic-addon2">
               <div class="input-group-append">
                 <button class="btn btn-primary" type="button">
                   <i class="fas fa-search fa-sm"></i>
@@ -177,7 +177,7 @@
               <div class="dropdown-menu dropdown-menu-right p-3 shadow animated--grow-in" aria-labelledby="searchDropdown">
                 <form class="form-inline mr-auto w-100 navbar-search">
                   <div class="input-group">
-                    <input type="text" class="form-control bg-light border-0 small" placeholder="Search for..." aria-label="Search" aria-describedby="basic-addon2">
+                    <input type="text" class="form-control bg-light border-0 small h-a" placeholder="Search for..." aria-label="Search" aria-describedby="basic-addon2">
                     <div class="input-group-append">
                       <button class="btn btn-primary" type="button">
                         <i class="fas fa-search fa-sm"></i>
@@ -341,33 +341,33 @@
             <!-- Border Left Utilities -->
             <div class="col-lg-6">
 
-              <div class="card mb-4 py-3 border-left-primary">
+              <div class="card mb-4 py-3 border-right-primary">
                 <div class="card-body">
-                  .border-left-primary
+                  .border-right-primary
                 </div>
               </div>
 
-              <div class="card mb-4 py-3 border-left-success">
+              <div class="card mb-4 py-3 border-right-success">
                 <div class="card-body">
-                  .border-left-success
+                  .border-right-success
                 </div>
               </div>
 
-              <div class="card mb-4 py-3 border-left-info">
+              <div class="card mb-4 py-3 border-right-info">
                 <div class="card-body">
-                  .border-left-info
+                  .border-right-info
                 </div>
               </div>
 
-              <div class="card mb-4 py-3 border-left-warning">
+              <div class="card mb-4 py-3 border-right-warning">
                 <div class="card-body">
-                  .border-left-warning
+                  .border-right-warning
                 </div>
               </div>
 
-              <div class="card mb-4 py-3 border-left-danger">
+              <div class="card mb-4 py-3 border-right-danger">
                 <div class="card-body">
-                  .border-left-danger
+                  .border-right-danger
                 </div>
               </div>
 
