--- a/register.html
+++ b/register.html
@@ -20,9 +20,9 @@
 
 </head>
 
-<body class="bg-gradient-primary">
+<body class="bg-gradient-primary rtl">
 
-  <div class="container">
+  <div class="container ">
 
     <div class="card o-hidden border-0 shadow-lg my-5">
       <div class="card-body p-0">
